Stop main content from overlapping the signin module

--- a/client/main.css
+++ b/client/main.css
@@ -42,6 +42,7 @@ body {
 }
 main {
   flex: 1 0 auto;
+  z-index: -1;
 }
 footer.page-footer {
   margin-top: 0;
